# ind3d

./: .gitignore  CMakeLists.txt  README.md  ind3d
data/: exam.map  house.map  huge.map  map.map
graphics/depthmaps/: blue_keycard.zaxis  bulletpack.zaxis  cellspack.zaxis  green_keycard.zaxis  hi_power.zaxis  medpack.zaxis  revolver.zaxis  revolver_sight.zaxis  robot.zaxis  tesla_gun.zaxis
graphics/shaders/: chunk.fs  fs.fs  light.fs  light.vs  map.vs  model.fs  model.vs  tex_model.fs  tex_model.vs  vs.vs  weapon.fs  weapon.vs
include/: alpha.h  gamma.h  pi.h
include/delta/: hash_table.h  stack.h  vec.h
sandbox/: config.h  core.c  core.h  game.c  game.h  main.c  util.c  util.h
sandbox/game/: enemy.c  enemy.h  enemy_states.c  enemy_states.h  map.c  map.h  player.c  player.h  projectile.c  projectile.h
sandbox/gl/: 1  chunk.c  chunk.h  geometry.c  geometry.h  graphics.h  line_renderer.c  line_renderer.h  model.c  model.h  plane_renderer.c  plane_renderer.h  renderer.c  renderer.h  shader.c  shader.h  stb_image.h  voxel_sprite.c  voxel_sprite.h
src/: alpha.c  gamma.c
src/gamma/: alphabet.c
